--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,61 +1,52 @@
-<main class="main" style="display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 25px">
-  <h1 style="font-size: 25px">events</h1>
-  <mat-form-field style="padding-bottom: 15px">
-    <mat-label>Enter a date range</mat-label>
-    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-      <input matStartDate formControlName="start" placeholder="Start date" (dateChange)="onDateChange()">
-      <input matEndDate formControlName="end" placeholder="End date" (dateChange)="onDateChange()">
-    </mat-date-range-input>
-    <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker></mat-date-range-picker>
+<main class="main">
+  <h1 class="title">Events</h1>
 
-    @if (range.controls.start.hasError('matStartDateInvalid')) {
-      <mat-error>Invalid start date</mat-error>
-    }
-    @if (range.controls.end.hasError('matEndDateInvalid')) {
-      <mat-error>Invalid end date</mat-error>
-    }
-  </mat-form-field>
+  <div class="date-picker-container">
+    <mat-form-field>
+      <mat-label>Enter a date range</mat-label>
+      <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+        <input matStartDate formControlName="start" placeholder="Start date" (dateChange)="onDateChange()">
+        <input matEndDate formControlName="end" placeholder="End date" (dateChange)="onDateChange()">
+      </mat-date-range-input>
+      <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-date-range-picker #picker></mat-date-range-picker>
 
-  <div class="mat-elevation-z8" style="position: relative; width: 100%">
-    <div style="display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgba(255, 255, 255, 0.6);
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: 1;" *ngIf="isLoading" >
-      <mat-progress-spinner color="accent" mode="indeterminate" diameter="50">
-      </mat-progress-spinner>
+      <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+      <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+    </mat-form-field>
+  </div>
+
+  <div class="table-container">
+    <div class="loading-overlay" *ngIf="isLoading">
+      <mat-progress-spinner color="accent" mode="indeterminate" diameter="50"></mat-progress-spinner>
     </div>
-    <table mat-table [dataSource]="events" class="mat-elevation-z8">
+
+    <table mat-table [dataSource]="events">
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef> Title </th>
-        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        <th mat-header-cell *matHeaderCellDef> Title</th>
+        <td mat-cell *matCellDef="let element"> {{ element.title }}</td>
       </ng-container>
 
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Description </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        <th mat-header-cell *matHeaderCellDef> Description</th>
+        <td mat-cell *matCellDef="let element"> {{ element.description }}</td>
       </ng-container>
 
       <ng-container matColumnDef="time">
-        <th mat-header-cell *matHeaderCellDef> Time </th>
-        <td mat-cell *matCellDef="let element"> {{element.time}} </td>
+        <th mat-header-cell *matHeaderCellDef> Time</th>
+        <td mat-cell *matCellDef="let element"> {{ element.time }}</td>
       </ng-container>
 
       <ng-container matColumnDef="location">
-        <th mat-header-cell *matHeaderCellDef> Location </th>
-        <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+        <th mat-header-cell *matHeaderCellDef> Location</th>
+        <td mat-cell *matCellDef="let element"> {{ element.location }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
-
 </main>
 
 <router-outlet></router-outlet>
